--- a/docs/rappport/rap.tex
+++ b/docs/rappport/rap.tex
@@ -2,6 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{amsmath}
+\usepackage{mathtools}
 \usepackage{amssymb}
 \usepackage{graphicx}
 \usepackage{url}
@@ -78,6 +79,9 @@ H. Bay, A. Ess, T. Tuytelaars, and L. Van Gool, ``SURF: Speeded Up Robust Featur
 
 \bibitem{manzanera_cours1}
 A.~Manzanera, ``Cours n\textsuperscript{o}1~: Introduction --- Mod\`eles et outils fondamentaux,'' \emph{Cours CSC\_4MI04 --- Reconnaissance d'Images}, ENSTA Paris, 2025--2026.
+
+\bibitem{manzanera_cours2}
+A.~Manzanera, ``Cours n\textsuperscript{o}2~: Caract\'eristiques multi-\'echelles,'' \emph{Cours CSC\_4MI04 --- Reconnaissance d'Images}, ENSTA Paris, 2025--2026.
 
 \end{thebibliography}
 
